Label api refactor
